--- a/frontend/src/components/common/NoResultsSplash/NoResultsSplash.module.scss
+++ b/frontend/src/components/common/NoResultsSplash/NoResultsSplash.module.scss
@@ -3,6 +3,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  max-width: 500px;
+  text-align: center;
+  margin: 50px auto;
 
   img {
     max-width: 500px;
@@ -10,5 +13,6 @@
 
   h2 {
     font-size: 1.3em;
+    margin-bottom: 0;
   }
 }
