order validation updates

--- a/frontend/src/components/layouts/Event/Event.module.scss
+++ b/frontend/src/components/layouts/Event/Event.module.scss
@@ -42,6 +42,7 @@
     position: sticky;
     top: 0;
     box-shadow: 0 5px 5px 0 #00000010;
+    z-index: 1;
 
     .breadcrumbs {
       font-weight: 500;
