--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -12,6 +12,7 @@
     flex-direction: column;
     gap: 20px;
     margin-bottom: 20px;
+
     .hi-ticket-row {
       display: flex;
       flex-flow: column;
@@ -59,28 +60,51 @@
         }
       }
 
+      .hi-ticket-quantity-error {
+        color: var(--widget-primary-color, var(--tk-primary));
+        background-color: var(--widget-background-color, var(--tk-color-white));
+        border: 2px solid var(--widget-primary-color, var(--tk-primary));
+        padding: 10px 20px;
+        margin: 10px 0;
+        border-radius: 5px;
+      }
+
       .hi-price-tier-row {
         margin-bottom: 10px;
-        //background-color: var(--widget-secondary-color, var(--tk-secondary));
-        //padding: 10px 20px;
-        //border-radius: 5px;
 
         .hi-price-tier {
-
+          .hi-price-tier-label {
+            font-weight: bold;
+          }
         }
 
         .hi-ticket-quantity-selector {
-          input {
-            color: var(--widget-primary-text-color, var(--tk-primary));
-          }
-          button {
-            &:disabled {
-              border: none;
-              opacity: .5;
+          .button-input {
+            input {
+              color: var(--widget-primary-text-color, var(--tk-primary));
             }
 
-            background-color: var(--widget-secondary-color, var(--tk-primary));
-            color: var(--widget-secondary-text-color, var(--tk-color-white));
+            button {
+              &:disabled {
+                border: none;
+                opacity: .5;
+              }
+
+              background-color: var(--widget-secondary-color, var(--tk-primary));
+              color: var(--widget-secondary-text-color, var(--tk-color-white));
+            }
+          }
+
+          .select-input {
+            input {
+              background-color: var(--widget-background-color, var(--tk-color-white));
+              border: 2px solid var(--widget-primary-color, var(--tk-primary));
+              color: var(--widget-primary-text-color, var(--tk-primary));
+            }
+
+            svg {
+              color: var(--widget-primary-text-color, var(--tk-primary));
+            }
           }
         }
       }
@@ -91,10 +115,14 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    margin-top: 20px;
 
     .hi-promo-code-input {
       flex: 1;
       margin-right: 20px;
+      background: var(--widget-background-color, var(--tk-color-white));
+      border: 2px solid var(--widget-primary-color, var(--tk-primary));
+      color: var(--widget-primary-text-color, var(--tk-primary));
     }
 
     .hi-apply-promo-code-button {
