fix price showing as free

--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -22,9 +22,6 @@
 
       .hi-ticket-description-row {
         font-size: .9em;
-        //background-color: #f4f4f4;
-        //padding: 10px 20px;
-        //border-radius: 5px;
       }
 
       .hi-title-row {
@@ -75,6 +72,16 @@
         .hi-price-tier {
           .hi-price-tier-label {
             font-weight: bold;
+          }
+
+          .hi-price-tier-price {
+            .hi-donation-input-wrapper {
+              .hi-donation-input {
+                color: var(--widget-primary-text-color, var(--tk-primary));
+                background-color: var(--widget-background-color, var(--tk-color-white));
+                border: 2px solid var(--widget-primary-color, var(--tk-primary));
+              }
+            }
           }
         }
 
