--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -75,6 +75,15 @@
           }
 
           .hi-price-tier-price {
+            .hi-price-tier-price-amount {
+              display: flex;
+              gap: 5px;
+
+              svg {
+                margin-top: 3px;
+              }
+            }
+
             .hi-donation-input-wrapper {
               .hi-donation-input {
                 color: var(--widget-primary-text-color, var(--tk-primary));
