--- a/frontend/src/components/common/WidgetEditor/WidgetEditor.module.scss
+++ b/frontend/src/components/common/WidgetEditor/WidgetEditor.module.scss
@@ -35,7 +35,7 @@
 
 .browserChrome {
   width: 100%;
-  background: #e2e2e2;
+  background: #f0f0f0;
   border-radius: 5px 5px 0 0;
   height: 40px;
   display: flex;
@@ -117,7 +117,7 @@
   min-height: 80vh;
   background-color: #ffffff;
   border-radius: var(--tk-radius-lg);
-  border: 1px solid #c3c3c3;
+  border: 1px solid #dbdbdb;
   overflow: hidden;
 }
 
