refactor and styling

--- a/frontend/src/components/common/MessageList/MessageList.module.scss
+++ b/frontend/src/components/common/MessageList/MessageList.module.scss
@@ -30,7 +30,8 @@
       display: flex;
       flex: 1;
       gap: 10px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
+      margin-top: 4px;
 
       .date {
         margin-right: 5px;
