update readme and more organizer work

--- a/frontend/src/components/common/EventCard/EventCard.module.scss
+++ b/frontend/src/components/common/EventCard/EventCard.module.scss
@@ -12,7 +12,7 @@
   }
 
   .body {
-    padding: var(--mantine-spacing-md);
+    padding: var(--mantine-spacing-xs);
     flex: 1;
 
     @include respond-below(sm) {
