--- a/frontend/src/components/layouts/Event/Event.module.scss
+++ b/frontend/src/components/layouts/Event/Event.module.scss
@@ -174,6 +174,12 @@
         font-size: .9em;
         font-weight: 600;
 
+        &.loading {
+          background-color: #4b327d75;
+          width: 90%;
+          height: 33px;
+        }
+
         &.linkActive, &:hover {
           background: #4b327d75;
           color: var(--tk-color-white);
