--- a/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
@@ -47,7 +47,6 @@
 
   .innerContainer {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     max-width: 1000px;
     place-self: center;
@@ -55,6 +54,7 @@
     color: var(--homepage-primary-text-color, var(--tk-primary));
     padding: 35px;
     width: 100%;
+    min-height: 100vh;
 
     a {
       color: var(--homepage-primary-text-color, var(--tk-primary)) !important;
