--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -10,6 +10,8 @@
   --tk-color-gray-dark: #838383;
   --tk-color-money-green: #00b894;
   --tk-color-blue: rgba(49, 105, 255, 0.62);
+  --tk-link-color: var(--tk-primary);
+
 
   --tk-color-white: #ffffff;
   --tk-color-black: #000000;
@@ -49,6 +51,7 @@ fieldset {
 
 a {
   text-decoration: none;
+  color: var(--tk-link-color);
 }
 
 // Mantine overrides
