--- a/frontend/src/components/common/NoResultsSplash/NoResultsSplash.module.scss
+++ b/frontend/src/components/common/NoResultsSplash/NoResultsSplash.module.scss
@@ -12,9 +12,11 @@
   img {
     max-width: 500px;
     width: 240px;
+    height: 240px;
 
     @include respond-below(md) {
       width: 170px;
+      height: 170px;
     }
   }
 
