docker compose tweaks and email updates

--- a/frontend/src/components/common/PoweredByFooter/FloatingPoweredBy.module.scss
+++ b/frontend/src/components/common/PoweredByFooter/FloatingPoweredBy.module.scss
@@ -4,8 +4,8 @@
     font-size: 0.9rem;
     z-index: 1000;
     text-align: center;
-    padding: 10px;
     border-radius: 5px;
+    margin-top: 30px;
     a {
         text-decoration: none;
         font-weight: 600;
