--- a/frontend/src/components/routes/event/HomepageDesigner/HomepageDesigner.module.scss
+++ b/frontend/src/components/routes/event/HomepageDesigner/HomepageDesigner.module.scss
@@ -75,12 +75,12 @@
       }
     }
 
-    h2 {
+    > h2 {
       display: none;
     }
 
     @include respond-below(sm) {
-      h2 {
+      > h2 {
         display: block;
       }
 
