fix select tickets promo code appication, homepage designer and widget render issues

--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -147,6 +147,15 @@
       color: var(--widget-secondary-text-color, var(--tk-color-white));
       border: none;
     }
+
+    .hi-promo-code-applied {
+      display: flex;
+      align-items: center;
+    }
+
+    .hi-promo-code-applied-remove-icon-button {
+      margin-left: 10px;
+    }
   }
 
   .hi-footer-row {
