--- a/frontend/src/components/common/CheckInListList/CheckInListList.module.scss
+++ b/frontend/src/components/common/CheckInListList/CheckInListList.module.scss
@@ -83,6 +83,10 @@
         .capacityText {
           margin-top: 10px;
           color: #999;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          font-size: 0.9rem;
         }
       }
 
