--- a/frontend/src/components/common/TaxAndFeeList/TaxAndFeeList.module.scss
+++ b/frontend/src/components/common/TaxAndFeeList/TaxAndFeeList.module.scss
@@ -1,15 +1,15 @@
 .taxes {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   gap: 20px;
-  flex-wrap: wrap;
+  margin-top: 20px;
 
   .taxBlock {
     border: 2px solid var(--tk-color-gray-2);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    width: 200px;
-    max-width: 200px;
+    justify-content: space-between;
 
     .taxName {
       font-size: 1.2rem;
@@ -57,8 +57,6 @@
       margin-bottom: var(--tk-spacing-sm);
       padding: 10px;
     }
-
-
   }
 }
 
