Widget design fixes

--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -1,11 +1,12 @@
+
+.full-height {
+  height: 100vh;
+}
+
 .hi-ticket-widget-container {
   background-color: var(--widget-background-color, var(--tk-color-white));
   color: var(--widget-primary-text-color);
   padding: var(--widget-padding, var(--tk-spacing-md));
-
-  &.full-height {
-    height: 100vh;
-  }
 
   a, button {
     color: var(--widget-primary-text-color, var(--tk-primary));
