--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -22,7 +22,7 @@
       display: flex;
       flex-flow: column;
       border: 3px solid var(--widget-primary-color, var(--tk-secondary));
-      padding: 10px 20px 20px;
+      padding: 10px 20px;
       border-radius: 5px;
 
       .hi-ticket-description-row {
@@ -40,6 +40,11 @@
 
           h3 {
             margin: 10px 0;
+          }
+
+          .hi-ticket-collapse-arrow {
+            margin-left: auto;
+            color: var(--widget-secondary-color, var(--tk-primary));
           }
         }
 
