Make ticket titles bold again

--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -36,10 +36,13 @@
 
         .hi-ticket-title {
           flex: 1;
-          font-weight: bold;
 
           h3 {
             margin: 10px 0;
+
+            a {
+              font-weight: bold;
+            }
           }
 
           .hi-ticket-collapse-arrow {
