Make ticket availability snippet work with the new collapse arrow

--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -45,15 +45,15 @@
             }
           }
 
-          .hi-ticket-collapse-arrow {
-            margin-left: auto;
-            color: var(--widget-secondary-color, var(--tk-primary));
-          }
-        }
+          .hi-ticket-title-metadata {
+            .hi-ticket-collapse-arrow {
+              color: var(--widget-secondary-color, var(--tk-primary));
+              margin-left: 10px;
+            }
 
-        .hi-ticket-availability {
-          text-align: right;
-          color: var(--widget-primary-text-color);
+            margin-left: auto;
+            font-weight: normal;
+          }
         }
       }
 
