--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -2,7 +2,7 @@
   height: 100vh;
 }
 
-.hi-ticket-widget-container {
+.hi-product-widget-container {
   background-color: var(--widget-background-color, var(--tk-color-white));
   color: var(--widget-primary-text-color);
   padding: var(--widget-padding, var(--tk-spacing-md));
@@ -11,19 +11,19 @@
     color: var(--widget-primary-text-color, var(--tk-primary));
   }
 
-  .hi-ticket-rows {
+  .hi-product-rows {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-bottom: 20px;
 
-    .hi-ticket-row {
+    .hi-product-row {
       display: flex;
       flex-flow: column;
       border: 3px solid var(--widget-primary-color, var(--tk-secondary));
       border-radius: 5px;
 
-      .hi-ticket-description-row {
+      .hi-product-description-row {
         font-size: .9em;
       }
 
@@ -32,7 +32,7 @@
         justify-content: center;
         align-items: center;
 
-        .hi-ticket-title {
+        .hi-product-title {
           flex: 1;
           padding: 10px 20px;
           display: flex;
@@ -47,8 +47,8 @@
             }
           }
 
-          .hi-ticket-title-metadata {
-            .hi-ticket-collapse-arrow {
+          .hi-product-title-metadata {
+            .hi-product-collapse-arrow {
               color: var(--widget-secondary-color, var(--tk-primary));
               margin-left: 10px;
             }
@@ -59,12 +59,12 @@
         }
       }
 
-      .hi-ticket-content {
+      .hi-product-content {
         padding: 10px 20px;
       }
 
       .hi-price-tiers-rows {
-        .ticketPrice {
+        .productPrice {
 
           .hi-price-tier-amount {
             span:first-child {
@@ -76,7 +76,7 @@
         }
       }
 
-      .hi-ticket-quantity-error {
+      .hi-product-quantity-error {
         color: var(--widget-primary-color, var(--tk-primary));
         background-color: var(--widget-background-color, var(--tk-color-white));
         border: 2px solid var(--widget-primary-color, var(--tk-primary));
@@ -113,7 +113,7 @@
           }
         }
 
-        .hi-ticket-quantity-selector {
+        .hi-product-quantity-selector {
           .button-input {
             input {
               color: var(--widget-primary-text-color, var(--tk-primary));
@@ -182,7 +182,7 @@
     margin-top: 20px;
     flex-direction: column;
 
-    .hi-ticket-page-message {
+    .hi-product-page-message {
       margin-bottom: 20px;
       padding: 10px 20px;
       border-radius: 5px;
