--- a/frontend/src/components/common/AttendeeCheckInTable/QrScanner.module.scss
+++ b/frontend/src/components/common/AttendeeCheckInTable/QrScanner.module.scss
@@ -40,6 +40,13 @@
     z-index: 2;
   }
 
+  .soundToggle {
+    position: absolute;
+    top: 20px;
+    left: 60px;
+    z-index: 2;
+  }
+
   .closeButton {
     position: absolute;
     top: 20px;
