Compress audio files and TS fixes

--- a/frontend/src/components/common/AttendeeCheckInTable/QrScanner.module.scss
+++ b/frontend/src/components/common/AttendeeCheckInTable/QrScanner.module.scss
@@ -42,8 +42,8 @@
 
   .soundToggle {
     position: absolute;
-    top: 20px;
-    left: 60px;
+    bottom: 20px;
+    left: 20px;
     z-index: 2;
   }
 
