Update tests and order and attendee modals

--- a/frontend/src/components/modals/ViewAttendeeModal/ViewAttendeeModal.module.scss
+++ b/frontend/src/components/modals/ViewAttendeeModal/ViewAttendeeModal.module.scss
@@ -1,18 +1,16 @@
-@import "../../../styles/mixins";
-
 .container {
   padding: 0.5rem;
 }
 
 .header {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  align-items: center;
   margin-bottom: 1.5rem;
   padding: 0 0.5rem;
 }
 
-.orderInfo {
+.attendeeInfo {
   display: flex;
   flex-direction: column;
+  gap: 0.25rem;
 }
