Add capacity assignment migration

--- a/frontend/src/components/layouts/Checkout/Checkout.module.scss
+++ b/frontend/src/components/layouts/Checkout/Checkout.module.scss
@@ -43,6 +43,11 @@
       .actionBar {
         padding: var(--tk-spacing-md);
         width: 100%;
+
+        .title {
+          font-size: 1.2em;
+          font-weight: 500;
+        }
       }
 
       h1 {
