--- a/frontend/src/components/common/ToolBar/ToolBar.module.scss
+++ b/frontend/src/components/common/ToolBar/ToolBar.module.scss
@@ -2,6 +2,7 @@
 
 .card {
   container-type: inline-size;
+  margin-bottom: 1rem;
 
   .wrapper {
     display: flex;
@@ -12,11 +13,31 @@
     @include respond-below(sm, true) {
       flex-direction: column;
       align-items: flex-start;
+      width: 100%;
     }
 
     .searchBar {
       margin-bottom: 0 !important;
       width: 100%;
+      flex: 1;
+      min-width: 0; // Prevents flex item from overflowing
+    }
+
+    .filterAndActions {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      place-self: flex-end;
+
+      @include respond-below(sm, true) {
+        width: 100%;
+        justify-content: flex-end;
+      }
+    }
+
+    .filter {
+      display: flex;
+      align-items: center;
     }
 
     .actions {
@@ -24,6 +45,7 @@
       gap: 10px;
       align-items: center;
       place-self: flex-end;
+      flex-wrap: wrap;
     }
   }
 
