Add offline payment support to the check in tool + Add invoicing support

--- a/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
+++ b/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
@@ -112,6 +112,16 @@
         color: #d64646;
         width: 140px;
       }
+
+      .awaitingPayment {
+        font-size: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #e09300;
+        font-weight: 900;
+        margin-bottom: 10px;
+      }
     }
 
     .productButtons {
