--- a/frontend/src/components/layouts/CheckIn/CheckIn.module.scss
+++ b/frontend/src/components/layouts/CheckIn/CheckIn.module.scss
@@ -80,6 +80,12 @@
     .details {
       flex: 1;
 
+      .awaitingPayment {
+        margin: 3px 0;
+        color: #e09300;
+        font-weight: 900;
+      }
+
       .product {
         color: #999;
         font-size: 0.9em;
