Login & Register redesign

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -9,8 +9,9 @@
   --tk-color-gray-2: #e2e2e2;
   --tk-color-gray-dark: #838383;
   --tk-color-money-green: #00b894;
-  --tk-color-blue: rgba(49, 105, 255, 0.62);
+  --tk-color-blue: rgba(23, 62, 161, 0.62);
   --tk-link-color: var(--tk-primary);
+  --tk-pink: #d6499c;
 
   --tk-color-white: #ffffff;
   --tk-color-black: #000000;
