--- a/frontend/src/components/routes/auth/Login/Login.module.scss
+++ b/frontend/src/components/routes/auth/Login/Login.module.scss
@@ -1,5 +1,17 @@
-.registerMessage {
-  margin-top: 20px;
-  padding: 20px;
+.header {
   text-align: center;
+  margin-bottom: 10px;
+
+  h2 {
+    margin: 0;
+  }
+
+  p {
+    margin-top: -0;
+  }
+}
+
+
+.loginCard {
+  padding: 30px;
 }
