--- a/frontend/src/components/routes/auth/Register/Register.module.scss
+++ b/frontend/src/components/routes/auth/Register/Register.module.scss
@@ -1,6 +1,6 @@
 .header {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 
   h2 {
     margin: 0;
@@ -9,4 +9,9 @@
   p {
     margin-top: -0;
   }
+}
+
+.registerCard {
+  padding: 30px;
+  max-width: 500px;
 }
