--- a/frontend/src/components/routes/auth/Login/Login.module.scss
+++ b/frontend/src/components/routes/auth/Login/Login.module.scss
@@ -3,7 +3,7 @@
   margin-bottom: 10px;
 
   h2 {
-    margin: 0;
+    margin: 0 0 5px;
   }
 
   p {
@@ -13,5 +13,4 @@
 
 
 .loginCard {
-  padding: 30px;
 }
