--- a/frontend/src/components/routes/auth/Register/Register.module.scss
+++ b/frontend/src/components/routes/auth/Register/Register.module.scss
@@ -1,9 +1,11 @@
+@import "../../../../styles/mixins.scss";
+
 .header {
   text-align: center;
   margin-bottom: 10px;
 
   h2 {
-    margin: 0;
+    margin: 0 0 5px;
   }
 
   p {
@@ -12,6 +14,5 @@
 }
 
 .registerCard {
-  padding: 30px;
   max-width: 500px;
 }
