--- a/frontend/src/components/layouts/AuthLayout/Auth.module.scss
+++ b/frontend/src/components/layouts/AuthLayout/Auth.module.scss
@@ -131,10 +131,11 @@
   background: transparent;
   box-sizing: border-box;
   height: 100vh;
+  padding: 0 20px;
+  min-width: 250px;
 
   @include respond-below(md) {
     height: auto;
-    padding: 15px;
   }
 
   .logo {
