Fix promo code input styles

--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -177,6 +177,12 @@
       border: none;
     }
 
+    .hi-close-promo-code-input-button {
+        background-color: var(--widget-secondary-color, var(--tk-primary));
+        color: var(--widget-secondary-text-color, var(--tk-color-white));
+        border: none;
+    }
+
     .hi-promo-code-applied {
       display: flex;
       align-items: center;
