--- a/frontend/src/components/common/AttendeeList/AttendeeList.module.scss
+++ b/frontend/src/components/common/AttendeeList/AttendeeList.module.scss
@@ -12,7 +12,7 @@
 
 .attendee {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   padding: 0.875rem;
   background: var(--mantine-color-gray-0);
   border: 1px solid var(--mantine-color-gray-2);
@@ -57,4 +57,33 @@
 .avatar {
   background: var(--tk-color-gray);
   font-weight: 500;
+}
+
+/* Added styles for answers display */
+.answersContainer {
+  margin-top: 0.75rem;
+  padding-top: 0.75rem;
+  padding-left: .4rem;
+  border-top: 1px solid var(--mantine-color-gray-2);
+}
+
+.questionAnswer {
+  margin-bottom: 0.75rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.questionTitle {
+  display: flex;
+  gap: 0.5rem;
+  margin-bottom: 0.25rem;
+  align-items: flex-start;
+}
+
+.answer {
+  color: var(--mantine-color-gray-7);
+  padding-left: 1.5rem;
+  font-size: var(--mantine-font-size-sm);
 }
