Homepage design tweaks

--- a/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
@@ -64,6 +64,7 @@
     @include respond-below(md) {
       min-height: 100vh;
       justify-content: space-between;
+      padding: 20px;
     }
 
     a {
