--- a/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
@@ -43,6 +43,7 @@
         place-self: flex-start;
         margin-right: 10px;
         color: var(--homepage-secondary-color, var(--tk-primary));
+        min-width: 20px;
       }
     }
 
