Product quantity style fix

--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -51,6 +51,7 @@
           .hi-product-title-metadata {
             margin-left: 5px;
             font-weight: normal;
+            display: flex;
           }
 
           .hi-product-collapse-arrow {
